--- a/ddd-structures/pom.xml
+++ b/ddd-structures/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.coen92.ddd</groupId>
-    <artifactId>structures</artifactId>
+    <artifactId>ddd-structures</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>structures</name>
-    <description>structures</description>
+    <name>ddd-structures</name>
+    <description>ddd-structures</description>
     <properties>
         <java.version>21</java.version>
         <spring-modulith.version>1.1.2</spring-modulith.version>
